--- a/app/static/css/tutor.css
+++ b/app/static/css/tutor.css
@@ -1,3 +1,6 @@
+.container{
+    width: 80% !important;
+}
 
 .side-link{
     height: 40px;
@@ -28,8 +31,6 @@
 /* .comment-content-wrap{ display: none;} */
 
 .comment-header-avatar{
-    height: 50px;
-    width: 50px;
     border-radius: 50%;
     overflow: hidden;
 }
