adjust UI in user_profile

--- a/app/templates/python_intro.html
+++ b/app/templates/python_intro.html
@@ -13,7 +13,7 @@
                 <h2>{{ message[0] }}</h2>
             </div>
         {% endfor %}
-        <div class="col-md-3 side content-wrap">
+        <div class="col-md-2 side content-wrap">
             <ul class="nav nav-pills nav-stacked">
                 <li role="presentation" class="side-link" id="side-index">
                     <span class="icon icon-book"></span>&nbsp;目录
@@ -35,6 +35,30 @@
                 </li>
                 <li role="presentation" class="side-link">
                     <a href="#">第二章：函数编程</a>
+                </li>
+                <li role="presentation" class="side-link">
+                    <a href="#">&nbsp;&nbsp;第二章：自定义函数1</a>
+                </li>
+                <li role="presentation" class="side-link">
+                    <a href="#">&nbsp;&nbsp;第二章：自定义函数2</a>
+                </li>
+                <li role="presentation" class="side-link">
+                    <a href="#">&nbsp;&nbsp;第二章：常用的高阶函数</a>
+                </li>
+                <li role="presentation" class="side-link">
+                    <a href="#">第三章：函数编程</a>
+                </li>
+                <li role="presentation" class="side-link">
+                    <a href="#">&nbsp;&nbsp;第二章：自定义函数1</a>
+                </li>
+                <li role="presentation" class="side-link">
+                    <a href="#">&nbsp;&nbsp;第二章：自定义函数2</a>
+                </li>
+                <li role="presentation" class="side-link">
+                    <a href="#">&nbsp;&nbsp;第二章：常用的高阶函数</a>
+                </li>
+                <li role="presentation" class="side-link">
+                    <a href="#">第四章：函数编程</a>
                 </li>
                 <li role="presentation" class="side-link">
                     <a href="#">&nbsp;&nbsp;第二章：自定义函数1</a>
@@ -173,6 +197,7 @@
             </div>
             </div>
         </div>
+        <div class="col-md-1" style="background-image: url('../static/images/backgrounds/blue.svg'); height: 1080px; margin-top: 100px;"></div>
     </div>
 </div>
 <!-- 模态框 -->
