--- a/app/templates/user_profile.html
+++ b/app/templates/user_profile.html
@@ -17,7 +17,7 @@
 {% block content %}
     <div class="main-content">
         <div class="container">
-            <div class="row user-header">
+            <div class="row user-header" style="background-image: url('../static/images/backgrounds/orange.svg')">
                 <div class="avatar col-md-2 col-md-offset-1">
                     <a href="#" class="tooltip-test" data-toggle="tooltip" title="<h5>点击头像可以更换头像</h5>">
                         <img src="{{ current_user.avatar }}" class="img-rounded img-responsive" id="avatar-tri">
