--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,7 +18,7 @@
             <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
     <!-- Favicon and touch icons -->
-    <link rel="shortcut icon" href="../static/ico/favicon.png" />
+    <link rel="shortcut icon" href="../static/ico/book-logo-small.png" />
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../static/ico/apple-touch-icon-144-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../static/ico/apple-touch-icon-114-precomposed.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../static/ico/apple-touch-icon-72-precomposed.png" />
