--- a/app/templates/change_password.html
+++ b/app/templates/change_password.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>LOGIN</title>
+    <title>修改密码</title>
     <!-- CSS -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500" />
     <link rel="stylesheet" href="../static/css/bootstrap.css" />
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-2 text">
-                    <h1>简单教程<small>登录</small></h1>
+                    <h1>简单教程<small>找回密码</small></h1>
 
                 </div>
             </div>
@@ -42,31 +42,28 @@
                 <div class="col-sm-6 col-sm-offset-3 form-box">
                     <div class="form-top">
                         <div class="form-top-left">
-                            <h3>登录</h3>
-                            <p>请输入您的用户名和密码</p>
+                            <h3>修改密码</h3>
+                            <p>请输入您的新密码</p>
                         </div>
                         <div class="form-top-right">
                             <i class="fa fa-key"></i>
                         </div>
                     </div>
                     <div class="form-bottom">
-                        <form role="form" action="{{ url_for('base_bp.login') }}" method="post" class="login-form">
-                            {{ form.hidden_tag() }}
-                            <div class="form-group">
-                                <label class="sr-only" for="form-email">Email</label>
-                                邮箱
-                                {{ form.email(type="text", placeholder="请输入您的邮箱", class="form-email form-control", id="form-email") }}
+                        <form role="form" action="{{ url_for('base_bp.password_change_validate', token=token, _external=True) }}" method="post" class="password-form">
 
+                            <div class="form-group">
+                                <label class="sr-only" for="form-password">Password</label> 密码
+                                <input type="password" class="form-control" id="form-password" name="password" placeholder="请输入新的密码">
                             </div>
                             <div class="form-group">
-                                <label class="sr-only" for="form-password">Password</label>
-                                密码
-                                {{ form.password(type="password", placeholder="请输入您的密码", class="form-password form-control", id="form-password") }}
-                                <div class="alert alert-danger" role="alert" id="login-alert-danger">{{ error }}</div>
+                                <label class="sr-only" for="form-repassword">Password</label> 确认密码
+                                <input type="password" class="form-control" id="form-repassword" placeholder="请重复新的密码">
+                                <div class="alert alert-danger" role="alert" id="repassword-alert-danger" style="display:none">两次输入的密码不一致，请检查！</div>
                             </div>
-                            <button type="submit" class="btn">登录</button>
+                            <button type="submit" class="btn" id="submit">找回密码</button>
                             <a href="{{ url_for('base_bp.register') }}" class="pull-left"> 先去注册</a>
-                            <a href="{{ url_for('base_bp.forget_password') }}" class="pull-right">忘记密码</a>
+                            <a href="{{ url_for('base_bp.login') }}" class="pull-right">登陆</a>
                         </form>
                     </div>
                 </div>
@@ -80,6 +77,20 @@
 <script src="../static/js/bootstrap.js"></script>
 <script src="../static/js/jquery.backstretch.min.js"></script>
 <script src="../static/js/scripts.js"></script>
+<script>
+    $(function(){
+        $('#form-repassword').blur(function(){
+            var password = $('#form-password').val();
+            var repassword = $('#form-repassword').val();
+            if(password != repassword){
+                $('#repassword-alert-danger').css('display', 'block');
+            }else{
+                $('#repassword-alert-danger').css('display', 'none');
+            }
+        });
+
+    })
+</script>
 <!--[if lt IE 10]>
 
         <![endif]-->
