fix emai-on-cloud bug, change background images for login-register

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -6,7 +6,7 @@ body {
     color: #888;
     line-height: 30px;
     text-align: center;
-	background: url('../images/backgrounds/1.jpg');
+	background: url('../images/backgrounds/blue.svg');
 }
 
 strong { font-weight: 500; }
