add reply in comment module(now without back), add db.table sumcomment, add a ful-template-tutor for front to edit

--- a/app/templates/base_tutor.html
+++ b/app/templates/base_tutor.html
@@ -36,6 +36,8 @@
 
                 autoFloatEnabled: true,
 
+                initialFrameHeight: 170,
+
                 toolbar:['source | undo redo | bold italic underline strikethrough | superscript subscript | forecolor backcolor | removeformat |',
                     'insertorderedlist insertunorderedlist | selectall cleardoc paragraph | fontfamily fontsize' ,
                     '| justifyleft justifycenter justifyright justifyjustify |',
