--- a/app/templates/comment_block.html
+++ b/app/templates/comment_block.html
@@ -45,24 +45,45 @@
                             <button id="comment-submit-button" type="button" class="btn btn-primary">提交</button>
                         </div>
                     </div>
+                    <form class="reply-form-hide">
+                        <div class="form-group">
+                            <div class="col-sm-10">
+                                <script id="container-for-sub-comment" name="sub-comment" type="text/plain" style="width: 100%">  请在这里输入具体的内容</script>
+                            </div>
+                            <div class="col-sm-1">
+                                <button type="submit" class="btn btn-info btn-sm btn-submit">回复</button>
+                            </div>
+                            <div class="col-sm-1">
+                                <a class="btn btn-default btn-sm btn-cancel">取消</a>
+                            </div>
+                        </div>
+                    </form>
                     <!--具体评论-->
                     {% for user_com in user_comment %}
                         <li class="comment list-group-item clearfix row">
+
                             <div class="comment-avatar col-md-2">
                                 <img id="test" class="comment-header-avatar img-responsive" src="{{ user_com[0].avatar }}">
                             </div>
-                            <div class="comment-header col-md-9">
+                            <div class="comment-header col-md-10">
 
                                 <div class="comment-header-title col-md-10">
                                     <strong>{{ user_com[1].title }}</strong>
                                 </div>
+                                <div class="reply col-md-2">
+                                    <button class="btn btn-info btn-sm pull-right reply-btn" style="margin-top: 10px">回复</button>
+                                    <!-- 父评论的id -->
+                                    <span class="parent-comment-id" style="display: none">{{ user_com[1].id }}</span>
+                                </div>
 
-                                <div class="comment-detail col-md-9">
+
+                                <div class="comment-detail col-md-10">
                                     {{ user_com[1].content|safe }}
                                 </div>
                             </div>
 
-                            <div class="comment-from">
+                            <div class="comment-from col-md-offset-2 col-md-10">
+
                                 <p class="pull-right">
                                     by: {{ user_com[0].username }}&nbsp;&nbsp;&nbsp;
                                     posted: {{ user_com[1].posted }}
@@ -72,6 +93,35 @@
                     {% endfor %}
                 </ul>
             </div>
+            <script>
+            $(function(){
+                var width = $('div.comment-detail').width();
+                $('.reply-btn').click(function(){
+                    $(this).fadeOut(600);
+                    $(this).parent().parent().next().prepend(
+                        $('.reply-form-hide').fadeIn(600)
+                    );
+                });
+                $('.btn-cancel').click(function(){
+                    $(this).parent().parent().parent().fadeOut(600);
+                    $('.reply-btn').fadeIn(600);
+                });
+                window.um = UM.getEditor('container-for-sub-comment', {
+                autoHeightEnabled: true,
+
+                autoFloatEnabled: true,
+
+                initialFrameWidth: width,
+
+                initialFrameHeight: 170,
+
+                toolbar:['source | undo redo | bold italic underline strikethrough | superscript subscript | forecolor backcolor | removeformat |',
+                    'insertorderedlist insertunorderedlist | selectall cleardoc paragraph | fontfamily fontsize' ,
+                    '| justifyleft justifycenter justifyright justifyjustify |',
+                    'link unlink | emotion | horizontal print preview fullscreen', 'drafts']
+            });
+            })
+            </script>
         {% else %}
             <div class="comment-content-wrap panel-body">
                 <h2>本文章还没有评论，快去成为第一个评论者吧！</h2>
