complete reply function, mainly in ajax and backside, also add toastr as information-provider

--- a/app/templates/base_tutor.html
+++ b/app/templates/base_tutor.html
@@ -20,6 +20,10 @@
     <!-- tutor部分-->
     <link rel="stylesheet" href="../static/css/tutor.css">
 
+    <!-- toastr部分 -->
+    <link rel="stylesheet" href="../static/toastr/toastr.css">
+    <script src="../static/toastr/toastr.min.js"></script>
+
     <!-- UEditor部分 -->
     <link rel="stylesheet" href="../static/umeditor/themes/default/css/umeditor.min.css">
     <link rel="stylesheet" href="../static/umeditor/dialogs/emotion/emotion.css">
