--- a/app/static/css/tutor.css
+++ b/app/static/css/tutor.css
@@ -21,7 +21,7 @@
 .side{
     border: solid #ccc 1px;
     background: #f5f5f5!important;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .main-text{
@@ -56,7 +56,7 @@
     border-collapse: collapse;
 }
 
-ul>form{
+ul>li>form{
     display: none;
 }
 
@@ -71,7 +71,7 @@ ul>form{
 }
 
 .content{
-    margin-top: 100px;
+    margin-top: 50px;
     padding-left: 50px;
 }
 .main-text{
