change style for home page and code part

--- a/app/templates/full_template_tutor.html
+++ b/app/templates/full_template_tutor.html
@@ -191,6 +191,9 @@
             </div>
             <div class="main-text">
                 <h3>简单叙述</h3>
+				
+				<code>x = 1 </code> <br>
+				<code>y = 2 </code>
 
                 <p>Python是一种编程语言。</p>
 
