--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -177,16 +177,24 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="col-sm-4 event_animate_left">
+                    <a href="{{ url_for('python_bp.intro') }}" style="text-decoration: none">
                     <img src="../static/images/cover/python_cover.png" alt="Blog Post 1" class="img-responsive" />
+                    </a>
                 </div>
                 <div class="col-sm-8 blog_text event_animate_right">
-                    <h1>Python 入门向教程</h1>
+                    <a href="{{ url_for('python_bp.intro') }}" style="text-decoration: none"><h1>Python 入门向教程</h1></a>
                     <p>
                         <span class="glyphicon glyphicon-user"></span> posted by <a href="#">黎坚</a>  &nbsp;&nbsp;
                         <span class="glyphicon glyphicon-calendar"></span> 5<sup>th</sup> September 2084 &nbsp;&nbsp;
                         <span class="glyphicon glyphicon-bookmark"></span> <a href="#">编程</a>, <a href="#">Python</a>, <a href="#">入门</a>
                     </p>
-                    <p>Architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusm amet aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>（本教程是完全面向新手的Python3教程，就算你之前完全没有接触过编程，也丝毫不必担心）<br>
+                        python是一种面向对象的<strong>解释性编程语言</strong>，看到这，你可能会对“面向对象”和“解释性”感到疑惑，但不用担心，我们会在后面的教程中谈到，现阶段不用理解这两个概念。<br>
+                        作为编程语言，python能做的事情很多，用于开发桌面软件、网站（本网站的后台使用的就是python）、游戏，也可以用来收集网络数据、进行数据处理等等。<br>
+                        不过，同样的功能,其他的很多编程语言也能实现。诸如性能极佳的C++, 功能全面的Java， 网站后台领域运用广泛的php，科学计算领域鼎鼎有名的matlab、R语言……那么我们为什么要选择学习python呢？<br>
+                        简单来说，原因在于Python具有很多的优势：<strong>语言精炼，符号简洁；扩展丰富、强大；业界广泛的运用；命令行带来的互动性；易学易上手……</strong>这些优势使得Python成为了近些年“最流行”的编程语言。<br>
+                        如果你对这门语言产生了一丝兴趣，并且想了解一些关于编程的基本知识，欢迎你学习这篇教程！
+                    </p>
                 </div>
                 <div class="clearfix"></div>
                 <div class="col-sm-4 event_animate_left">
