fix viewport bug

--- a/app/templates/python/python_2ch.html
+++ b/app/templates/python/python_2ch.html
@@ -74,7 +74,7 @@
                     <h2 class="display-2">安装开发环境&nbsp;&nbsp;&nbsp;<small class="text-muted">2017.10.01</small></h2>
                 </div>
                 <div class="main-text clearfix">
-                    <div class="col-sm-12">
+                    <div class="col-md-12">
                         <section id="1st-part">
                             <h3>为更好的编程体验安装适合的开发环境</h3>
                             <p>对于想要使用一门编程语言进行开发的人来说，TA需要在自己的电脑上安装一些必要的“软件”。</p>
@@ -111,8 +111,8 @@
 
                         <p>在这里我简单提供一下两个版本的安装过程的参考：</p>
                         <div class="alert alert-info clearfix" role="alert">
-                            <p class="col-sm-10 col-xs-10" style="line-height: 1.5; font-size: 20px; margin-top: 0">“精简版”的安装和说明</p>
-                            <button class="col-sm-2 col-xs-2 btn btn-info pull-right" id="3rd-part-trigger">Switch</button>
+                            <p class="col-md-10 col-xs-10" style="line-height: 1.5; font-size: 20px; margin-top: 0">“精简版”的安装和说明</p>
+                            <button class="col-md-2 col-xs-2 btn btn-info pull-right" id="3rd-part-trigger">Switch</button>
                         </div>
                         <section id="3rd-part" style="display:none;">
                             <p> 从官网下载最新的Python3版本（请根据自己的操作系统选择对应的版本）链接在这里：
@@ -127,8 +127,8 @@
 
                             <p>安装完毕后，电脑上会多出以下的几个图标：</p>
                             <div class="clearfix">
-                                <img class="col-sm-offset-4 col-sm-2 img-responsive" src="../../static/images/python/2cp/python_idle.jpg" style="margin-bottom: 10px">
-                                <img class="col-sm-2 img-responsive" src="../../static/images/python/2cp/python_.jpg" style="margin-bottom: 10px">
+                                <img class="col-md-offset-4 col-md-2 img-responsive" src="../../static/images/python/2cp/python_idle.jpg" style="margin-bottom: 10px">
+                                <img class="col-md-2 img-responsive" src="../../static/images/python/2cp/python_.jpg" style="margin-bottom: 10px">
                                 <span class="com-sm-4"></span>
                             </div>
                             <p>第一个是交互环境(Console)和编辑器，大家可以启动这个程序，来输入代码运行，也可以用这个程序创建新的文件，在新文件里编写长段的代码。</p>
@@ -136,8 +136,8 @@
 
                         </section>
                         <div class="alert alert-info clearfix" role="alert">
-                            <p class="col-sm-10 col-xs-10" style="line-height: 1.5; font-size: 20px; margin-top: 0">“Anaconda”的安装和说明</p>
-                            <button class="col-sm-2 col-xs-2 btn btn-info pull-right" id="4th-part-trigger">Switch</button>
+                            <p class="col-md-10 col-xs-10" style="line-height: 1.5; font-size: 20px; margin-top: 0">“Anaconda”的安装和说明</p>
+                            <button class="col-md-2 col-xs-2 btn btn-info pull-right" id="4th-part-trigger">Switch</button>
                         </div>
 
                         <section id="4th-part" style="display:none;">
