--- a/app/templates/base_tutor.html
+++ b/app/templates/base_tutor.html
@@ -2,11 +2,10 @@
 <html lang="zh-cmn">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewpoint" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>简单教程{% block sub_title %}{% endblock %}</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">    <title>简单教程{% block sub_title %}{% endblock %}</title>
 
     <!-- 基本资源 -->
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css">
     <link rel="stylesheet" href="../static/css/font-awesome.css">
     <link rel="stylesheet" href="../static/css/base.css">
     <link rel="stylesheet" href="../static/css/home.css">
